@@ -1,12 +1,13 @@
 package com.bakdata.conquery.models.query;
 
 import java.util.ArrayList;
-import java.util.HashMap;
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
 import java.util.concurrent.atomic.AtomicInteger;
 import java.util.function.Consumer;
+import java.util.function.Predicate;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
@@ -39,7 +40,6 @@ import com.bakdata.conquery.models.messages.namespaces.specific.ExecuteQuery;
 import com.bakdata.conquery.models.query.resultinfo.ResultInfo;
 import com.bakdata.conquery.models.query.results.EntityResult;
 import com.bakdata.conquery.models.query.results.ShardResult;
-import com.bakdata.conquery.models.query.visitor.QueryVisitor;
 import com.bakdata.conquery.models.worker.DatasetRegistry;
 import com.bakdata.conquery.models.worker.Namespace;
 import com.bakdata.conquery.util.QueryUtils.NamespacedIdentifiableCollector;
@@ -95,7 +95,7 @@ public class ManagedQuery extends ManagedExecution<ShardResult> implements Singl
 
 		involvedWorkers = namespace.getWorkers().size();
 
-		query.resolve(new QueryResolveContext(getDataset(), namespaces, config,null));
+		query.resolve(new QueryResolveContext(getDataset(), namespaces, config, null));
 	}
 
 	@Override
@@ -208,17 +208,17 @@ public class ManagedQuery extends ManagedExecution<ShardResult> implements Singl
 	 * All further labels are dropped.
 	 */
 	@Override
-	protected void makeDefaultLabel(final StringBuilder sb, PrintSettings cfg) {
-		final Map<Class<? extends Visitable>, List<Visitable>> sortedContents = new HashMap<>();
+	protected String makeDefaultLabel(PrintSettings cfg) {
+		final StringBuilder sb = new StringBuilder();
+
+		final Map<Class<? extends Visitable>, List<Visitable>> sortedContents =
+				Visitable.stream(query)
+						 .collect(Collectors.groupingBy(Visitable::getClass));
 
 		int sbStartSize = sb.length();
 
-		QueryVisitor visitor = t -> sortedContents.computeIfAbsent(t.getClass(), (clazz) -> new ArrayList<>()).add(t);
-
-		query.visit(visitor);
-
 		// Check for CQExternal
-		List<Visitable> externals = sortedContents.computeIfAbsent(CQExternal.class, (clazz) -> List.of());
+		List<Visitable> externals = sortedContents.getOrDefault(CQExternal.class, Collections.emptyList());
 		if (!externals.isEmpty()) {
 			if (sb.length() > 0) {
 				sb.append(" ");
@@ -227,37 +227,50 @@ public class ManagedQuery extends ManagedExecution<ShardResult> implements Singl
 		}
 
 		// Check for CQReused
-		if (!sortedContents.computeIfAbsent(CQReusedQuery.class, (clazz) -> List.of()).isEmpty()) {
+		if (sortedContents.containsKey(CQReusedQuery.class)) {
 			if (sb.length() > 0) {
 				sb.append(" ");
 			}
 			sb.append(C10N.get(CQElementC10n.class, I18n.LOCALE.get()).reused());
 		}
 
+
 		// Check for CQConcept
-		final AtomicInteger length = new AtomicInteger();
-		String usedConcepts = sortedContents.computeIfAbsent(CQConcept.class, (clazz) -> List.of()).stream()
-											.map((CQConcept.class::cast))
-											.map(c -> makeLabelWithRootAndChild(c, cfg))
-											.distinct()
-											.filter((s) -> !Strings.isNullOrEmpty(s))
-											.takeWhile(elem -> length.addAndGet(elem.length()) < MAX_CONCEPT_LABEL_CONCAT_LENGTH)
-											.collect(Collectors.joining(" "));
+		if (sortedContents.containsKey(CQConcept.class)) {
+			if (sb.length() > 0) {
+				sb.append(" ");
+			}
+			// Track length of text we are appending for concepts.
+			final AtomicInteger length = new AtomicInteger();
 
-		if (sb.length() > 0 && !usedConcepts.isEmpty()) {
-			sb.append(" ");
-		}
-		sb.append(usedConcepts);
+			sortedContents.get(CQConcept.class)
+						  .stream()
+						  .map(CQConcept.class::cast)
 
-		// If not all Concept could be included in the name, point that out
-		if (length.get() > MAX_CONCEPT_LABEL_CONCAT_LENGTH) {
-			sb.append(" ").append(C10N.get(CQElementC10n.class, I18n.LOCALE.get()).furtherConcepts());
+						  .map(c -> makeLabelWithRootAndChild(c, cfg))
+						  .filter(Predicate.not(Strings::isNullOrEmpty))
+						  .distinct()
+
+						  .takeWhile(elem -> length.addAndGet(elem.length()) < MAX_CONCEPT_LABEL_CONCAT_LENGTH)
+						  .forEach(label -> sb.append(label).append(" "));
+
+			// Last entry will output one Space that we don't want
+			sb.deleteCharAt(sb.length() - 1);
+
+			// If not all Concept could be included in the name, point that out
+			if (length.get() > MAX_CONCEPT_LABEL_CONCAT_LENGTH) {
+				sb.append(" ").append(C10N.get(CQElementC10n.class, I18n.LOCALE.get()).furtherConcepts());
+			}
 		}
+
+
 
 		// Fallback to id if nothing could be extracted from the query description
 		if (sbStartSize == sb.length()) {
 			sb.append(getId().getExecution());
 		}
+
+		return sb.toString();
 	}
 
 	@Override
